Force keyframes every 100 frames.

Old behavior forced keyframes every 30000 frames. This makes it prohibitively
expensive to seek in a resulting video (without re-encoding), as this might
require decoding up to 30000 frames. Forcing more keyframes makes seeking much
more efficient.

BUG=594241

Review URL: https://codereview.chromium.org/1782043003

Cr-Commit-Position: refs/heads/master@{#381090}

Former-commit-id: 10fd187c1de8dff86eb165deaecec7a5b5f6cc36